--- a/src/containers/home/header/header.css
+++ b/src/containers/home/header/header.css
@@ -11,10 +11,15 @@
 	border-radius: var(--image__border-radius);
 }
 
+.header__text-title {
+	color: var(--color-tertiary);
+}
+
 .header__text {
 	width: 47%;
 }
 
 .header__text-description {
 	margin: 20px 0;
+	color: var(--color-tertiary);
 }
