--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,8 @@ body {
 
 .button-light {
 	background-color: var(--color-background);
-	color: var(--color-tertiary);
-	border: 1px solid var(--color-tertiary);
+	color: var(--color-primary);
+	border: 1px solid var(--color-primary);
 	padding: 10px 40px;
 	border-radius: var(--button__border-radius);
 	font-size: 1.2em;
@@ -50,12 +50,12 @@ body {
 }
 
 .button-light:hover {
-	background-color: var(--color-tertiary);
+	background-color: var(--color-primary);
 	color: var(--color-background);
 }
 
 .article__date {
-	background-color: white;
+	background-color: var(--color__text-background);
 	color: var(--color-primary);
 	border-radius: var(--date__border-radius);
 	padding: 5px 12px;
@@ -74,9 +74,19 @@ body {
 }
 
 .article__info-text {
-	padding: 5px 12px 0;
+	padding: 10px;
 	display: inline-block;
-	background-color: white;
+	background-color: var(--color__text-background);
 	color: var(--color-primary);
 	font-size: var(--article__text-size);
+}
+
+.text-padding {
+	padding-bottom: 10px;
+}
+
+.text-link {
+	text-transform: uppercase;
+	color: var(--color-primary);
+	font-weight: 900;
 }
