--- a/src/components/services/serviceCard.css
+++ b/src/components/services/serviceCard.css
@@ -11,7 +11,7 @@
 
 .service__card__icon {
 	font-size: 3em;
-	background-color: var(--color-tertiary);
+	background-color: var(--color-primary);
 	color: white;
 	margin: 0;
 	padding: 25px;
@@ -31,10 +31,4 @@
 	font-size: 1em;
 	margin: 0 0 1.4rem;
 	text-align: center;
-}
-
-.service__card__link {
-	text-transform: uppercase;
-	color: var(--color-tertiary);
-	font-weight: 900;
 }
