--- a/src/containers/home/best/best.css
+++ b/src/containers/home/best/best.css
@@ -25,3 +25,18 @@
 	font-size: 5rem;
 	font-weight: 700;
 }
+
+.side__article-icon {
+	font-size: 1rem;
+}
+
+.best__container-right {
+	display: flex;
+	flex-direction: column;
+	margin-left: 20px;
+}
+
+.best__container-right_article {
+	background-color: var(--color-quaternary);
+	border-radius: var(--image__border-radius);
+}
