--- a/src/containers/home/header/header.css
+++ b/src/containers/home/header/header.css
@@ -12,7 +12,7 @@
 }
 
 .header__text-title {
-	color: var(--color-tertiary);
+	color: var(--color-primary);
 }
 
 .header__text {
@@ -21,5 +21,5 @@
 
 .header__text-description {
 	margin: 20px 0;
-	color: var(--color-tertiary);
+	color: var(--color-primary);
 }
