--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 	--color-second-pallet__tertiary: #e5e0ff;
 	--color-second-pallet__quaternary: #fff2f2;
 
+	--border-radius: 30px;
 	--image__border-radius: 30px;
 	--button__border-radius: 30px;
 	--date__border-radius: 30px;
