--- a/src/components/titleLink/titleLink.css
+++ b/src/components/titleLink/titleLink.css
@@ -5,6 +5,8 @@
 	color: var(--color-primary);
 	transition: 0.3s;
 	cursor: pointer;
+	font-style: italic;
+	font-weight: 700;
 }
 .title__link-icon {
 	position: relative;
