--- a/src/containers/home/info/info.css
+++ b/src/containers/home/info/info.css
@@ -1,8 +1,13 @@
+.section__padding .container {
+	position: relative;
+}
+
 .info {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
+	padding-bottom: 16rem;
 }
 
 .info__image img {
@@ -26,9 +31,12 @@
 }
 
 .info__cards {
+	position: absolute;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 	padding: 0 5rem;
+	margin: auto;
+	top: 37rem;
 }
