--- a/src/containers/home/header/header.css
+++ b/src/containers/home/header/header.css
@@ -4,11 +4,13 @@
 	justify-content: space-between;
 	color: var(--color-primary);
 	align-items: center;
+	position: relative;
 }
 
 .header__image {
-	width: 150%;
 	border-radius: var(--image__border-radius);
+	flex: 1;
+	margin-right: 2%;
 }
 
 .header__text-title {
@@ -16,10 +18,39 @@
 }
 
 .header__text {
-	width: 47%;
+	flex: 1;
+	text-align: justify;
+	text-justify: inter-word;
+	margin-left: 2%;
 }
 
 .header__text-description {
 	margin: 20px 0;
 	color: var(--color-primary);
+	font-weight: 500;
+}
+
+@media screen and (max-width: 900px) {
+	.header__content {
+		flex-direction: column;
+	}
+	.header__image {
+		width: 100%;
+		margin-right: 0;
+	}
+	.header__text {
+		margin-left: 0;
+		position: absolute;
+		text-align: center;
+		top: 20%;
+		padding: 0 10%;
+	}
+	.header__text-button {
+		background-color: rgba(255, 255, 255, 0.803);
+		border: 1px solid var(--color-background);
+		color: var(--color-primary);
+		position: absolute;
+		right: 10%;
+		top: 170%;
+	}
 }
