--- a/src/containers/home/services/services.css
+++ b/src/containers/home/services/services.css
@@ -23,3 +23,16 @@
 	flex-direction: row;
 	justify-content: center;
 }
+
+.services__carousel {
+	display: none;
+}
+
+@media screen and (max-width: 900px) {
+	.services__cards {
+		display: none;
+	}
+	.services__carousel {
+		display: block;
+	}
+}
