--- a/src/components/article/sideArticle/sideArticle.css
+++ b/src/components/article/sideArticle/sideArticle.css
@@ -41,3 +41,11 @@
 	vertical-align: middle;
 	font-size: 1.4rem;
 }
+
+@media screen and (max-width: 900px) {
+	.side__article-info-button {
+		font-size: 1rem;
+		padding: 10px 2%;
+		font-weight: 400;
+	}
+}
