--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -31,5 +31,17 @@
 	transition: transform 0.3s ease;
 }
 
-.carousel__items-services {
+@media screen and (max-width: 900px) {
+	.carousel__button {
+		font-size: 1.7rem;
+		padding: 0;
+		margin: 0;
+	}
+
+	.carousel__items {
+		padding: 0;
+	}
+	.carousel__item {
+		width: 80%;
+	}
 }
