--- a/src/components/carousel/carouselCard/carouselCard.css
+++ b/src/components/carousel/carouselCard/carouselCard.css
@@ -33,3 +33,21 @@
 	width: 500px;
 	transition: linear 0.4s;
 }
+
+@media screen and (max-width: 900px) {
+	.carousel-card__image-content {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		padding: 1.1rem;
+		height: 300px;
+	}
+	.active-card {
+		height: 400px;
+		width: 280px;
+		transition: linear 0.4s;
+	}
+	.carousel-card__description {
+		font-size: 1rem;
+	}
+}
