--- a/src/components/infoCard/infoCard.css
+++ b/src/components/infoCard/infoCard.css
@@ -11,3 +11,10 @@
 	font-size: 2rem;
 	font-weight: 800;
 }
+
+@media screen and (max-width: 900px) {
+	.info-card {
+		padding: 1rem;
+		font-size: 1rem;
+	}
+}
