--- a/src/components/order/orderImage/orderImage.css
+++ b/src/components/order/orderImage/orderImage.css
@@ -14,3 +14,9 @@
 	flex-direction: column;
 	align-items: center;
 }
+
+@media screen and (max-width: 900px) {
+	.order-icon {
+		padding: 20px 0;
+	}
+}
