--- a/src/containers/home/best/best.css
+++ b/src/containers/home/best/best.css
@@ -54,3 +54,12 @@
 	margin-top: 20px;
 	padding: 0 2rem;
 }
+
+@media screen and (max-width: 900px) {
+	.best__container-left_title {
+		font-size: 3rem;
+	}
+	.best {
+		margin-top: 150px;
+	}
+}
