--- a/src/containers/home/newPosts/newPosts.css
+++ b/src/containers/home/newPosts/newPosts.css
@@ -1,6 +1,6 @@
 .new-posts__section {
 	background-color: var(--color-background__second);
-	padding-top: 25rem;
+	padding-top: 18%;
 }
 
 .new-posts__title {
@@ -14,4 +14,13 @@
 
 .new-posts__carousel {
 	display: flex;
+}
+
+@media screen and (max-width: 900px) {
+	.new-posts__section {
+		padding-top: 35%;
+	}
+	.new-posts__title h1 {
+		font-size: 3rem;
+	}
 }
