--- a/src/containers/home/order/order.css
+++ b/src/containers/home/order/order.css
@@ -11,3 +11,12 @@
 	justify-content: center;
 	align-items: center;
 }
+
+@media screen and (max-width: 900px) {
+	.order__section-content {
+		margin-bottom: 30px;
+	}
+	.order__section-title {
+		font-size: 3.7rem;
+	}
+}
