--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -10,7 +10,7 @@
 	display: flex;
 	justify-content: space-between;
 	transition: transform 0.2s ease-in-out;
-	font-size: 1rem;
+	font-size: 1em;
 	font-weight: 800;
 	width: 100%;
 	padding: 0 2%;
@@ -26,9 +26,10 @@
 }
 
 .carousel__item {
-	width: 100%;
-	margin: 0 1%;
+	width: 90%;
+	/* margin: 0 1%; */
 	transition: transform 0.3s ease;
+	padding: 0 10px;
 }
 
 @media screen and (max-width: 900px) {
