--- a/src/components/infoCard/infoCard.css
+++ b/src/components/infoCard/infoCard.css
@@ -1,20 +1,21 @@
 .info-card {
 	border-radius: var(--border-radius);
-	padding: 2rem;
-	margin: 8rem 0.5rem 0;
+	padding: 2em;
+	margin: 8em 0.5em 0;
 	text-align: justify;
 	text-justify: inter-word;
-	font-size: 1.1rem;
+	font-size: 2.5vh;
 }
 
 .info-card__number {
-	font-size: 2rem;
+	font-size: 2em;
 	font-weight: 800;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 950px) {
 	.info-card {
-		padding: 1rem;
-		font-size: 1rem;
+		padding: 1em;
+		/* font-size: 1.3vw; */
+		margin-top: 5em;
 	}
 }
