--- a/src/containers/home/header/header.css
+++ b/src/containers/home/header/header.css
@@ -44,6 +44,7 @@
 		text-align: center;
 		top: 20%;
 		padding: 0 10%;
+		height: 70%;
 	}
 	.header__text-button {
 		background-color: rgba(255, 255, 255, 0.803);
@@ -51,6 +52,6 @@
 		color: var(--color-primary);
 		position: absolute;
 		right: 10%;
-		top: 170%;
+		bottom: 0%;
 	}
 }
