--- a/src/components/order/orderImage/orderImage.css
+++ b/src/components/order/orderImage/orderImage.css
@@ -20,3 +20,10 @@
 		padding: 20px 0;
 	}
 }
+
+@media screen and (max-width: 600px) {
+	.order-image {
+		font-size: 3em;
+		padding: 0.3em 0;
+	}
+}
