--- a/src/containers/home/info/info.css
+++ b/src/containers/home/info/info.css
@@ -46,6 +46,10 @@
 	background-color: white;
 }
 
+.info__carousel {
+	display: none;
+}
+
 @media screen and (max-width: 900px) {
 	.info__section {
 		height: 700px;
@@ -55,5 +59,26 @@
 	}
 	.info__cards {
 		padding: 0;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.info__section {
+		height: 600px;
+	}
+	.info__image {
+		display: none;
+	}
+	.info__content {
+		flex-grow: 1;
+		padding-left: 0;
+		text-align: center;
+	}
+	.info__cards {
+		display: none;
+	}
+	.info__carousel {
+		margin-top: 100px;
+		display: block;
 	}
 }
